fix touch on mobile

--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@
     bottom:0;
     left:0;
     background: #dde8e4;
+    
+    /* Предотвращает перехват инициативы браузером
+     * при перемещении карты на устройстве. */
+    touch-action: none;
 }
 
 #pretiles {
